--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,108 @@
+body {
+  height: 100vh;
+  background-color: rgb(10, 10, 59);
+}
+
+.mainContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.headerContainer {
+  background-color: rgb(0, 0, 255);
+  width: 100%;
+}
+
 h1 {
-  background-color: aliceblue;
-  border-style: solid;
-  border-width: 5px;
-  border-color: black;
-  border-radius: 10px;
+  display: inline-flex;
+  background-color: white;
+  border: 4px solid black;
+  border-radius: 8px;
   padding: 8px;
+  margin-left: 4%;
 }
 
-.row-content {
-  padding: 10px;
-  background-color: blue;
+.picrossContainer {
+  background-color: rgb(123, 169, 233);
+  margin: 16px 0;
+  padding: 16px;
+  border: 4px solid;
+  border-radius: 8px;
 }
 
-.col-content {
-  padding: 10px;
+.gridRow {
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.verticalNumContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 4px;
+}
+
+.horizontalNumContainer {
+  display: flex;
+}
+
+.yNumCount {
+  text-align: center;
+  width: 40px;
+  height: 20px;
+}
+
+.xNumCount {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 20px;
 }
 
 .gridSquare {
+  display: flex;
   border: 1px solid black;
-  width: 40px;
-  height: 40px;
-  border-radius: 0;
+  width: 38px;
+  height: 38px;
+  align-items: center;
+  justify-content: center;
+}
+
+.gridSquare:hover, .fillInTool:hover, .xTool:hover {
+  cursor: pointer;
+}
+
+.toolBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: 2px solid black;
+  border-radius: 8px;
+  padding: 16px 16px;
+  margin-top: 16px;
+}
+
+.fillInTool {
+  width: 38px;
+  height: 38px;
+  border: 1px solid gray;
+  background-color: black;
+}
+
+.removeTool {
+  width: 38px;
+  height: 38px;
+  border: 1px solid black;
+}
+
+.xTool {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 38px;
+  height: 38px;
+  border: 1px solid black;
 }
